--- a/index.html
+++ b/index.html
@@ -136,13 +136,14 @@
                     <li data-target="#carousel" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel" data-slide-to="1"></li>
                     <li data-target="#carousel" data-slide-to="2"></li>
+                    <li data-target="#carousel" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/portada1.jpg" alt="Carousel Image">
+                        <img src="img/portada6.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
-                            <p class="animated fadeInRight">Somos Profesionales</p>
-                            <h1 class="animated fadeInLeft">Transformamos Espacios en Naturaleza Viva</h1>
+                            <p class="animated fadeInRight">Líderes en Urbanismo</p>
+                            <h1 class="animated fadeInLeft">Espacios que Respiran Naturaleza</h1>
                             <a class="btn animated fadeInUp" href="contact.html">Contactar</a>
                         </div>
                     </div>
@@ -156,19 +157,27 @@
                     </div>-->
 
                     <div class="carousel-item">
-                        <img src="img/Sistema_riego_tecnificado1.jpeg" alt="Carousel Image">
+                        <img src="img/portada20.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
-                            <p class="animated fadeInRight">Somos Profesionales</p>
-                            <h1 class="animated fadeInLeft">Sistema de Riego Tecnificado</h1>
+                            <p class="animated fadeInRight">Experto en Paisajismo</p>
+                            <h1 class="animated fadeInLeft">Tu Proyecto, Nuestro Paisaje</h1>
                             <a class="btn animated fadeInUp" href="contact.html">Contactar</a>
                         </div>
                     </div>
 
                     <div class="carousel-item">
+                        <img src="img/portada30.jpg" alt="Carousel Image">
+                        <div class="carousel-caption">
+                            <p class="animated fadeInRight">Soluciones Ecológicas</p>
+                            <h1 class="animated fadeInLeft">Convertimos Tu Techo en Naturaleza</h1>
+                            <a class="btn animated fadeInUp" href="contact.html">Contactar</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
                         <img src="img/portada2.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
-                            <p class="animated fadeInRight">Somos Profesionales</p>
-                            <h1 class="animated fadeInLeft">Instalación de Manta Asfaltica</h1>
+                            <p class="animated fadeInRight">Soluciones que Protegen</p>
+                            <h1 class="animated fadeInLeft">Impermeabilización con Garantía</h1>
                             <a class="btn animated fadeInUp" href="contact.html">Contactar</a>
                         </div>
                     </div>
@@ -708,11 +717,11 @@
                                 <div class="slider-nav"><img src="img/cliente1.jpg" alt="Testimonial"></div>
                                 <div class="slider-nav"><img src="img/cliente2.jpg" alt="Testimonial"></div>
                                 <div class="slider-nav"><img src="img/cliente3.jpg" alt="Testimonial"></div>
-                                <div class="slider-nav"><img src="img/testimonial-4.jpg" alt="Testimonial"></div>
-                                <div class="slider-nav"><img src="img/testimonial-1.jpg" alt="Testimonial"></div>
-                                <div class="slider-nav"><img src="img/testimonial-2.jpg" alt="Testimonial"></div>
-                                <div class="slider-nav"><img src="img/testimonial-3.jpg" alt="Testimonial"></div>
-                                <div class="slider-nav"><img src="img/testimonial-4.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente4.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente5.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente6.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente7.jpg" alt="Testimonial"></div>
+                                <div class="slider-nav"><img src="img/cliente8.jpg" alt="Testimonial"></div>
                             </div>
                         </div>
                     </div>
@@ -741,29 +750,39 @@
                                     </p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Cliente 4</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>Petramás</h3>
+                                    <h4>Gestión ambiental y tratamiento de residuos</h4>
+                                    <p>
+                                        Petramás confió en nuestros servicios de paisajismo y mantenimiento de áreas verdes como parte de su compromiso con el medio ambiente y la sostenibilidad. Nuestra intervención contribuyó a mejorar la imagen de sus instalaciones y a generar espacios funcionales y respetuosos con el entorno natural.
+                                    </p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Cliente 5</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>Universidad San Ignacio de Loyola (USIL)</h3>
+                                    <h4>Educación superior y sostenibilidad institucional</h4>
+                                    <p>
+                                        La USIL confió en nuestros servicios de paisajismo y mantenimiento de áreas verdes para fortalecer su compromiso con la sostenibilidad y el bienestar de su comunidad educativa. Nuestra labor ayudó a crear espacios ecológicos, modernos y alineados con la visión institucional de desarrollo responsable.
+                                    </p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Cliente 6</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>Mota-Engil</h3>
+                                    <h4>Ingeniería, construcción y desarrollo urbano</h4>
+                                    <p>
+                                        En colaboración con Mota-Engil, aportamos soluciones paisajísticas que complementan la infraestructura urbana con criterios de sostenibilidad, funcionalidad y armonía visual. Nuestro trabajo integró naturaleza y diseño en entornos exigentes, reforzando el impacto positivo de sus proyectos en el espacio público.
+                                    </p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Cliente 7</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>Líder Grupo Constructor</h3>
+                                    <h4>Construcción integral y desarrollo de proyectos</h4>
+                                    <p>
+                                        Con Líder Grupo Constructor desarrollamos intervenciones paisajísticas que complementaron sus obras con entornos funcionales, sostenibles y visualmente armoniosos. Nuestra experiencia aportó valor agregado en la creación de espacios exteriores que reflejan la calidad y visión integral de sus proyectos inmobiliarios.
+                                    </p>
                                 </div>
                                 <div class="slider-item">
-                                    <h3>Cliente 8</h3>
-                                    <h4>profession</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus.</p>
+                                    <h3>Universidad La Cantuta</h3>
+                                    <h4>Educación superior y formación docente</h4>
+                                    <p>
+                                        En la Universidad La Cantuta, implementamos soluciones de paisajismo y mantenimiento de áreas verdes que fortalecen el entorno académico con espacios naturales, funcionales y sostenibles. Nuestro trabajo contribuyó a crear un ambiente propicio para el aprendizaje, la reflexión y el bienestar de su comunidad educativa.
+                                    </p>
                                 </div>
                             </div>
                         </div>
