--- a/index.html
+++ b/index.html
@@ -114,12 +114,26 @@
                                 <a href="about.html" class="nav-item nav-link">Nosotros</a>
                                 <a href="contact.html" class="nav-item nav-link">Contacto</a>
                             </div>-->
-                            <div class="navbar-nav mr-auto">
+                            <!--<div class="navbar-nav mr-auto">
                                 <a href="index.html" class="nav-item nav-link active"><i class="fas fa-leaf nav-icon"></i> Inicio</a>
                                 <a href="about.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Nosotros</a>
                                 <a href="service.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Servicios</a>
                                 <a href="contact.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Contacto</a>
-                            </div>
+                            </div>-->
+                            <div class="navbar-nav mr-auto">
+    <a href="index.html" class="nav-item nav-link active">
+        <span class="nav-dot"></span> Inicio
+    </a>
+    <a href="about.html" class="nav-item nav-link">
+        <span class="nav-dot"></span> Nosotros
+    </a>
+    <a href="service.html" class="nav-item nav-link">
+        <span class="nav-dot"></span> Servicios
+    </a>
+    <a href="contact.html" class="nav-item nav-link">
+        <span class="nav-dot"></span> Contacto
+    </a>
+</div>
                             <!--<div class="ml-auto">
                                 <a class="btn" href="#">Get A Quote</a>
                             </div>-->
@@ -975,7 +989,65 @@
     }
   });
 </script>
+<script>
+  // Cargar el sonido chime bonito
+  const clickSound = new Audio('img/mixkit-page-turn-chime-1106.mp3');
+  clickSound.volume = 0.4; // Ajusta volumen, 0.4 es suave
 
+  const navLinks = document.querySelectorAll('.navbar-nav .nav-link');
+
+  navLinks.forEach(link => {
+    link.addEventListener('click', function (e) {
+      e.preventDefault(); // Detiene la navegación inmediata
+
+      clickSound.currentTime = 0; // Reinicia si clickean rápido
+      clickSound.play();
+
+      const href = link.getAttribute('href');
+
+      // Espera 200 ms para dejar sonar el chime
+      setTimeout(() => {
+        window.location.href = href;
+      }, 1000);
+    });
+  });
+</script>
+<script>
+  // ✅ Crear el objeto de audio para el whoosh
+  const whooshHover = new Audio('img/mixkit-arrow-whoosh-1491.mp3');
+  whooshHover.volume = 0.4;
+
+  // ✅ Desbloquear contexto de audio con PRIMER click real
+  document.addEventListener('click', () => {
+    // Se reproduce una vez para desbloquear, luego se detiene al instante
+    whooshHover.play().then(() => {
+      whooshHover.pause();
+      whooshHover.currentTime = 0;
+    }).catch(err => {
+      console.log('Primera reproducción bloqueada:', err);
+    });
+  }, { once: true }); // Solo una vez
+
+  // ✅ HOVER en links del footer
+  document.querySelectorAll('.footer-link a').forEach(link => {
+    link.addEventListener('mouseenter', () => {
+      whooshHover.currentTime = 0;
+      whooshHover.play().catch(err => {
+        console.log('Hover play bloqueado:', err);
+      });
+    });
+  });
+
+  // ✅ HOVER en links de la navbar
+  document.querySelectorAll('.navbar-nav .nav-link').forEach(link => {
+    link.addEventListener('mouseenter', () => {
+      whooshHover.currentTime = 0;
+      whooshHover.play().catch(err => {
+        console.log('Hover play bloqueado:', err);
+      });
+    });
+  });
+</script>
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
