--- a/index.html
+++ b/index.html
@@ -121,19 +121,22 @@
                                 <a href="contact.html" class="nav-item nav-link"><i class="fas fa-leaf nav-icon"></i> Contacto</a>
                             </div>-->
                             <div class="navbar-nav mr-auto">
-    <a href="index.html" class="nav-item nav-link active">
-        <span class="nav-dot"></span> Inicio
-    </a>
-    <a href="about.html" class="nav-item nav-link">
-        <span class="nav-dot"></span> Nosotros
-    </a>
-    <a href="service.html" class="nav-item nav-link">
-        <span class="nav-dot"></span> Servicios
-    </a>
-    <a href="contact.html" class="nav-item nav-link">
-        <span class="nav-dot"></span> Contacto
-    </a>
-</div>
+                                <a href="index.html" class="nav-item nav-link active">
+                                    <span class="nav-dot"></span> Inicio
+                                </a>
+                                <a href="about.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Nosotros
+                                </a>
+                                <a href="service.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Servicios
+                                </a>
+                                <a href="portfolio.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Proyectos
+                                </a>
+                                <a href="contact.html" class="nav-item nav-link">
+                                    <span class="nav-dot"></span> Contacto
+                                </a>
+                            </div>
                             <!--<div class="ml-auto">
                                 <a class="btn" href="#">Get A Quote</a>
                             </div>-->
@@ -171,7 +174,7 @@
                     </div>-->
 
                     <div class="carousel-item">
-                        <img src="img/portada20.jpg" alt="Carousel Image">
+                        <img src="img/portada35.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">Experto en Paisajismo</p>
                             <h1 class="animated fadeInLeft">Tu Proyecto, Nuestro Paisaje</h1>
